Fixed spacing issue

--- a/app/client/public/css/styles.css
+++ b/app/client/public/css/styles.css
@@ -8,6 +8,10 @@
 }
 
 /* --- EPA/USWDS --- */
+.l-constrain {
+  max-width: 75rem;
+}
+
 .usa-site-alert .usa-alert {
   max-width: 1400px;
 }
